# Apotheosis

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  sitemap.xml
Documents/markdown-templates/: readme-template.md  report-template.md
Documents/mkdocs-template/: README.md  pyproject.toml
Editors/nvim-templates/: init.lua
Java/spring-template/: .dockerignore  .gitignore  Dockerfile  checkstyle.xml  pom.xml
Java/spring-template/src/main/java/com/example/: Application.java
Java/spring-template/src/main/java/com/example/config/: SecurityConfig.java  SwaggerConfig.java  WebConfig.java
Java/spring-template/src/main/java/com/example/controllers/: TemplateController.java
Java/spring-template/src/main/java/com/example/models/: Template.java  TemplateDTO.java
Java/spring-template/src/main/java/com/example/models/data/: DataManager.java  (+2 more)
Java/spring-template/src/main/java/com/example/services/: TemplateService.java
Java/spring-template/src/test/java/com/example/controllers/: TemplateControllerTest.java
Java/spring-template/src/test/java/com/example/services/: TemplateServiceTest.java
Python/fastapi-template/: Dockerfile  pyproject.toml
Python/fastapi-template/app/: app.py  logging_config.py  main.py  metrics.py
Python/fastapi-template/app/routers/: metrics.py  template.py
Python/fastapi-template/builds/: docker-compose.yaml
Python/fastapi-template/test/: test_main.py
Python/fastapi-template/test/routers/: test_template.py
Python/fastapi-template/util/logging/: logger.py  logging_config.py
Python/python-template/src/app/: main.py
