[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A production-ready FastAPI template with advanced features."
authors = ["Unknown"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
prometheus-fastapi-instrumentator = "^5.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.0"
